2021-09-07  Adrian Perez de Castro  <aperez@igalia.com>

        Fix non-unified builds

        Unreviewed non-unified build fixes.

        * workers/Worker.h: Add missing wtf/Deque.h header.

2021-09-01  Myles C. Maxfield  <mmaxfield@apple.com>

        CSSFontFaceSet.clear() should not clear CSS-connected members
        https://bugs.webkit.org/show_bug.cgi?id=229643

        Reviewed by Darin Adler.

        The spec https://drafts.csswg.org/css-font-loading-3/#dom-fontfaceset-clear says:

        > Remove all non-CSS-connected items

        * css/CSSFontFaceSet.h:
        * css/FontFaceSet.cpp:
        (WebCore::FontFaceSet::clear):

2021-08-13  Sergio Villar Senin  <svillar@igalia.com>

        [css-flexbox] Add initial support for css-align-3 positional alignment properties
        https://bugs.webkit.org/show_bug.cgi?id=229074

        Reviewed by Simon Fraser.

        Added initial support for Start and End positional alignment properties from
        https://drafts.csswg.org/css-align-3/#positional-values. These two properties
        align the flex item to be flush with the alignment container's (the flex container)
        start and end edges in the appropriate axis.

        * rendering/RenderFlexibleBox.cpp:
        (WebCore::RenderFlexibleBox::isColumnOrRowReverse const): New method.
        (WebCore::initialJustifyContentOffset): Handle Start and End.
        (WebCore::alignmentOffset): Ditto.
        (WebCore::RenderFlexibleBox::staticMainAxisPositionForPositionedChild):
        (WebCore::RenderFlexibleBox::alignmentForChild const):
        (WebCore::RenderFlexibleBox::layoutAndPlaceChildren):
        (WebCore::RenderFlexibleBox::layoutColumnReverse):
        (WebCore::initialAlignContentOffset): Handle Start and End.
        (WebCore::RenderFlexibleBox::alignFlexLines):
        * rendering/RenderFlexibleBox.h:

2021-09-01  Said Abou-Hallawa  <said@apple.com>

        [GPU Process](REGRESSION): A detached canvas leaks all the images it draws